2008-01-15 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: import gzip

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/SameSurnames.py (IncompleteSurname.apply): 
	can bring up people with empty surname

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/FilterEditor/_ShowResults.py: allow notes to be filtered
    0001607: Unreferenced filter test

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py (CSVParser.process): fixed csv import with 
	no surname (bug #1603)

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py (TopSurnamesGramplet.main): make
	clicking on data easier by clicking on entire line (bug #1594)

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/const.py.in: added constants for help pages
    * src/ViewManager.py: support for help pages called from menu
    0001606: Help menu items not functioning

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/SameSurnames.py (run): change description to just
	surname, not entire person (bug #1595)

2008-01-15 Benny Malengier <benny.malengier@gramps-project.org>
	* man/Makefile.am: Swedish removed again so it builds again
	* removed help files of version 2.x, only wiki manual now!
	* COPYING-DOCS -> help/COPYING-DOCS : refers to old doc, moved
	* Makefile.am: removed help subdir, and COPYING-DOCS
	The idea should be that should we add documentation again, it is done
	in the help dir with separate source packages too for translations

2008-01-15  Peter Landgren <peter.talken@telia.com>
    * man/Makefail.am: Swedish added (sv).
    * man/gramps.1.in: typo changed (sv).
    * man/sv/gramps.1.in: tried to add Swedish man page (sv).
    but failed. How do I create man/sv in the svn repository?

2008-01-15  Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/db/exceptions.py: wrong exception def, bug #1593